ver.191
add sensor to project